[package]
name = "kuon-cli"
version = "0.0.1"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuon = "0.0.16"
clap = "3.0.0-beta.2"
tokio = "1.2.0"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
