[package]
name = "petit"
version = "0.0.1"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
description = "A TUI Twitter client"
license = "MIT"
repository = "https://github.com/uzimaru0000/petit"
exclude = ["*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuon = "0.0.27"
clap = "3.0.0-beta.2"
tokio = "1.2.0"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tui = "0.14.0"
termion = "1.5.6"
maplit = "1.0.2"
reqwest = "0.11.1"
base64 = "0.13.0"
unicode-width = "0.1.8"
textwrap = "0.13.3"
